--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,46 +1,26 @@
 version: 0.2
 
-env:
-  variables:
-    AWS_ACCOUNT_ID: "<your-aws-account-id>"
-    REGION: "<your-region>"
-    REPOSITORY_NAME: "<your-ecr-repository-name>"
-    IMAGE_TAG: "latest" # You can modify this as per your versioning strategy
-
 phases:
-  install:
-    runtime-versions:
-      java: corretto11 # Maven build requires Java, so use the appropriate version
+  pre_build:
     commands:
-      # Install Docker (if using an environment without Docker pre-installed)
-      - echo Installing Docker...
-      - yum install -y docker
-      - service docker start
-
-      # Log in to Amazon ECR
-      - echo Logging in to Amazon ECR...
-      - $(aws ecr get-login --no-include-email --region $REGION)
+      - echo "Login to ECR"
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com
 
   build:
     commands:
-      # Build the Maven project
-      - echo Building the Maven project...
+      - cd my-webapp
       - mvn clean install
-
-      # Build the Docker image
-      - echo Building Docker image...
-      - docker build -t $REPOSITORY_NAME:$IMAGE_TAG .
-
   post_build:
     commands:
-      # Tag the Docker image
-      - echo Tagging the Docker image...
-      - docker tag $REPOSITORY_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPOSITORY_NAME:$IMAGE_TAG
-
-      # Push the Docker image to ECR
-      - echo Pushing the Docker image to ECR...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPOSITORY_NAME:$IMAGE_TAG
-
+      - echo "Build Completed Successfully"
+      - ls -l target/
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker images
+      - echo "Docker Push to ECR"
+      - docker push $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - echo "Docker Pushed Successfully"
 artifacts:
   files:
-    - "**/*"
+    - "my-webapp/target/*.jar"
+  discard-paths: yes
