--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       - docker images
       - echo "Docker Push to ECR"
       - docker push $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - echo "Docker Pushed Successfully"
+      - echo "Docker Pushed Successfuly"
 artifacts:
   files:
     - "my-webapp/target/*.jar"
