--- a/my-webapp/Dockerfile
+++ b/my-webapp/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
-ADD target/my-maven-docker-project.jar my-maven-docker-project.jar
+ADD target/my-webapp.war /my-webapp.war
 RUN echo "This is a Docker Build Jenkins Step" > out.txt
-ENTRYPOINT ["java", "-jar","my-maven-docker-project.jar"]
+ENTRYPOINT ["java", "-jar","my-webapp.war"]
 EXPOSE 8080
